--- a/barcode/Info.plist
+++ b/barcode/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>갤러리 접근 권한을 사용합니다</string>
 	<key>NSCameraUsageDescription</key>
